Preserve whitespaces in messages by using pre-wrap, fixes #10

--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -82,6 +82,7 @@ input[type="number"] {
     padding: .5rem;
     border-radius: var(--border-radius);
     max-width: fit-content;
+    white-space: pre-wrap;
 }
 
 button {
